[gd_scene load_steps=2 format=2]

[ext_resource path="res://GUI/gui.gd" type="Script" id=1]

[node name="GUi" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.2, 0.2 )

[node name="Round" type="Label" parent="VBoxContainer"]
margin_right = 40.0
margin_bottom = 14.0

[node name="Money" type="Label" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 40.0
margin_bottom = 32.0

[node name="ZombiesRemaining" type="Label" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 40.0
margin_bottom = 50.0

[node name="EnemyHealth" type="Label" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 40.0
margin_bottom = 68.0

[node name="EnemySpeed" type="Label" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 40.0
margin_bottom = 86.0

[node name="MaxSpawnTimer" type="Label" parent="VBoxContainer"]
margin_top = 90.0
margin_right = 40.0
margin_bottom = 104.0

[node name="PlayerHealth" type="Label" parent="VBoxContainer"]
margin_top = 108.0
margin_right = 40.0
margin_bottom = 122.0

[node name="Ammo" type="Label" parent="VBoxContainer"]
margin_top = 126.0
margin_right = 40.0
margin_bottom = 140.0

[node name="Perks" type="Label" parent="VBoxContainer"]
margin_top = 144.0
margin_right = 40.0
margin_bottom = 158.0
